<resources>
    <string name="app_name">Memory Sequence</string>
    <string name="action_settings">Settings</string>
    <string name="start_game">Start Game</string>
    <string name="base_display">Basic sequence display</string>
    <string name="A_display">Displays sequence A</string>
    <string name="B_display">Displays sequence B</string>
    <string name="C_Display">Displays sequence C</string>
    <string name="D_Display">Displays sequence D</string>
    <string name="GameOver">Game Over!</string>
    <string name="instruction_button">Instructions</string>
    <string name="web_page_display">Inspiration</string>
    <string name="title_activity_instruction">InstructionActivity</string>
    <string name="instructions">~ Click on the four colored buttons (the ones on the bottom) in the same sequence (left to right) as the ones displayed on the top.
        \n ~ If you enter the sequence correctly you will be given a new one to continue on.
        \n ~ If you don\'t enter it correctly a \"game over\" screen will appear.</string>
    <string name="web_display">Displays an web page specified by a given url</string>
</resources>
